# corpusgen

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  paper.bib  paper.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: api.md  examples.md  index.md
examples/: 01_explore_inventory.py  02_select_sentences.py  03_evaluate_corpus.py
src/corpusgen/: __init__.py
src/corpusgen/cli/: __init__.py  evaluate.py  generate.py  inventory.py  select.py
src/corpusgen/coverage/: __init__.py  tracker.py
src/corpusgen/data/: __init__.py  espeak_iso_mapping.json
src/corpusgen/evaluate/: __init__.py  distribution.py  error_rates.py  evaluate.py  perplexity.py  report.py  text_quality.py  trajectory.py
src/corpusgen/g2p/: __init__.py  manager.py  result.py
src/corpusgen/generate/: __init__.py  guidance.py
src/corpusgen/generate/backends/: __init__.py  llm_api.py  local.py  repository.py
src/corpusgen/generate/llm/: __init__.py
src/corpusgen/generate/local/: __init__.py
src/corpusgen/generate/phon_ctg/: __init__.py  constraints.py  loop.py  scorer.py  targets.py
src/corpusgen/generate/phon_datg/: __init__.py  attribute_words.py  graph.py  modulator.py
src/corpusgen/generate/phon_rl/: __init__.py  policy.py  reward.py  trainer.py  value_head.py
src/corpusgen/generate/repository/: __init__.py
src/corpusgen/generate/scorers/: __init__.py  fluency.py  phonotactic.py  readability.py
src/corpusgen/inventory/: __init__.py  mapping.py  models.py  phoible.py
src/corpusgen/select/: __init__.py  base.py  celf.py  distribution.py  greedy.py  ilp.py  nsga2.py  result.py  stochastic.py
src/corpusgen/weights/: __init__.py
tests/: conftest.py  test_backend_llm_api.py  test_backend_local.py  test_backend_repository.py  test_cli.py  test_coverage.py  test_distribution_integration.py  test_distribution_metrics.py  test_error_rates.py  test_espeak_mapping.py  test_evaluate.py  test_evaluate_function.py  test_fluency_scorer.py  test_g2p.py  test_guidance.py  test_integration_pipeline.py  test_integration_select.py  test_inventory_models.py  test_multilingual_robustness.py  test_perplexity.py  test_phoible_loader.py  test_phon_ctg_constraints.py  test_phon_ctg_loop.py  test_phon_ctg_scorer.py  test_phon_ctg_targets.py  test_phon_datg_attribute_words.py  test_phon_datg_graph.py  test_phon_datg_helpers.py  test_phon_datg_integration.py  test_phon_datg_modulator.py  test_phon_rl_policy.py  test_phon_rl_reward.py  test_phon_rl_trainer.py  test_phon_rl_value_head.py  test_phonotactic_scorer.py  test_readability_scorer.py  test_review_fixes.py  test_select_base.py  test_select_celf.py  test_select_dispatcher.py  (+12 more)
